update cari sekolah?search

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3561,6 +3561,12 @@ main.main-ppdb {
   }
 }
 
+.form-select-cari-sekolah {
+  .css-yk16xz-control {
+    background-color: #f8f9fa !important;
+  }
+}
+
 /* ======================= Cari Sekolah Page End ======================= */
 
 /* ============== RWD ============== */
