--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -600,6 +600,17 @@ h6 {
   right: 0;
   top: 2.25em;
 }
+
+.banner-program {
+  height: 419px;
+  background: url("/img/bg-program.svg");
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  left: 0;
+  right: 0;
+  top: 2.25em;
+}
 /* Z index */
 .z-100 {
   z-index: 100;
@@ -2013,6 +2024,78 @@ input[type="number"] {
       transform: translateY(-10px);
     }
   }
+}
+
+.checklist-ss {
+  padding-left: 0em !important;
+  li {
+    background: url("/img/checklist.svg") !important;
+    background-repeat: no-repeat !important;
+    list-style-type: none !important;
+    padding-left: 2.5em !important;
+    background-position-x: -8px !important;
+    background-position-y: -12px !important;
+    padding-bottom: 1.25em;
+  }
+}
+
+// image jurusan
+.image-jurusan {
+  width: 350px;
+  height: 250px;
+  transition: 0.8s;
+  cursor: pointer;
+}
+
+.image-jurusan::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  height: 500px;
+  transform: translate(-140%, -50%);
+  background: linear-gradient(
+    to bottom,
+    rgba(7, 0, 66, 0.45),
+    rgba(4, 0, 36, 0.45)
+  );
+  border-radius: 50%;
+  transition: 0.8s;
+}
+
+.image-jurusan:hover:after {
+  transform: translate(-50%, -50%);
+}
+
+.image-jurusan:hover img {
+  transform: translate(-50%, -50%) scale(1.3) rotate(20deg);
+}
+
+.image-jurusan img {
+  position: absolute;
+  height: 110%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.8s;
+}
+
+.image-jurusan .icon-jurusan {
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  transform: translate(-2000px, -50%);
+  transition: 0.8s;
+  transition-timing-function: ease-in;
+  background: var(--blue);
+}
+
+.image-jurusan:hover .icon-jurusan {
+  transform: translate(-50%, -50%);
+  transition-timing-function: ease;
 }
 
 /* ============== Utility End ==============  */
