--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1310,7 +1310,7 @@ h6 {
 }
 
 .ant-select-selection-placeholder {
-  font-size: 16px !important;
+  font-size: 16px !important; 
 }
 
 // Form Confirm Salah
@@ -1925,66 +1925,80 @@ input[type="number"] {
 }
 
 // Slider
-.awssld {
-  --content-background-color: none !important;
-}
+.slider {
+  .awssld {
+    --content-background-color: none !important;
+  }
 
-.awssld__wrapper {
-  height: 89vh !important;
-}
+  .awssld__wrapper {
+    height: 85vh !important;
+  }
 
-.awssld__bullets {
-  z-index: 2 !important;
-  bottom: 5% !important;
-}
+  .awssld__bullets {
+    position: relative !important;
+    background: #f6faff !important;
+    bottom: unset !important;
+  }
 
-.awssld__bullets button {
-  padding: 0;
-  display: block;
-  width: 8px !important;
-  height: 8px !important;
-  margin: 5px;
-  border-radius: 50%;
-  background: var(--control-bullet-color);
-  text-indent: -9999px;
-  overflow: hidden;
-  cursor: pointer;
-  border: none;
-  -webkit-transition: background-color 0.175s ease-out,
-    -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-  transition: background-color 0.175s ease-out,
-    -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-  -moz-transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-    background-color 0.175s ease-out,
-    -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-  transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-    background-color 0.175s ease-out;
-  transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-    background-color 0.175s ease-out,
-    -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-    -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-  transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-    background-color 0.175s ease-out,
-    -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-}
+  .awssld__bullets button {
+    padding: 0;
+    display: block;
+    width: 8px !important;
+    height: 8px !important;
+    margin: 5px;
+    border-radius: 50%;
+    background: var(--light-gray) !important;
+    text-indent: -9999px;
+    overflow: hidden;
+    cursor: pointer;
+    border: none;
+    -webkit-transition: background-color 0.175s ease-out,
+      -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+    transition: background-color 0.175s ease-out,
+      -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+    -moz-transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+      background-color 0.175s ease-out,
+      -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+    transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+      background-color 0.175s ease-out;
+    transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+      background-color 0.175s ease-out,
+      -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+      -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+    transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+      background-color 0.175s ease-out,
+      -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+  }
 
-.awssld__bullets .awssld__bullets--active {
-  -webkit-transform: scale(1.5);
-  -moz-transform: scale(1.5);
-  transform: scale(1.5);
-  background: var(--control-bullet-active-color);
-}
+  .awssld__bullets .awssld__bullets--active {
+    -webkit-transform: scale(1.5);
+    -moz-transform: scale(1.5);
+    transform: scale(1.5);
+    background: var(--blue) !important;
+  }
 
-.awssld__bullets .awssld__bullets--loading {
-  -webkit-transform: scale(1.2);
-  -moz-transform: scale(1.2);
-  transform: scale(1.2);
-}
+  .awssld__bullets .awssld__bullets--loading {
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    transform: scale(1.2);
+  }
 
-.slider-body {
-  z-index: 2;
-  position: absolute;
-  bottom: 13%;
+  .slider-body {
+    z-index: 2;
+    position: absolute;
+    top: 0 !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    a {
+      z-index: 2;
+      position: absolute;
+      top: 0 !important;
+      bottom: 0 !important;
+      left: 0 !important;
+      right: 0 !important;
+    }
+  }
 }
 
 // Slider End
@@ -3281,7 +3295,7 @@ main.main-ppdb {
 /* ======================= Landing Page PPDB Start ======================= */
 .navbar-ppdb {
   .navbar-brand {
-    margin-right: 175px;
+    margin-right: 155px;
   }
 
   .nav-link {
@@ -3751,139 +3765,124 @@ main.main-ppdb {
 }
 
 // About Page
-// .slider-fitur {
-//   .awssld__timer {
-//     background-color: transparent !important;
-//   }
-
-//   .awssld__wrapper {
-//     height: 75vh !important;
-//   }
-
-//   .awssld__bullets {
-//     z-index: 2 !important;
-//     top: -75% !important;
-//     button {
-//       position: relative;
-//       // background: white !important;
-//       width: 64px !important;
-//       height: 64px !important;
-//       margin: 24px;
-//       border-radius: 50%;
-//       background-repeat: no-repeat !important;
-//       background-size: cover !important;
-//       background-position: center !important;
-//       -webkit-transition: background-image 0.175s ease-out,
-//         -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-//       transition: background-image 0.175s ease-out,
-//         -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-//       -moz-transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-//         background-image 0.175s ease-out,
-//         -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-//       transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-//         background-image 0.175s ease-out;
-//       transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-//         background-image 0.175s ease-out,
-//         -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-//         -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-//       transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-//         background-image 0.175s ease-out,
-//         -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-//     }
-
-//     .awssld__bullets--active[data-index="0"] {
-//       -webkit-transform: scale(1.5);
-//       -moz-transform: scale(1.5);
-//       transform: none !important;
-//     }
-
-//     button[data-index="0"] {
-//       background-image: url("/img/icon-role-guru.svg") !important;
-//     }
-
-//     button[data-index="0"]::after {
-//       content: "";
-//       position: absolute;
-//       left: 0;
-//       display: block;
-//       width: 100px;
-//       height: 5px;
-//       color: salmon !important;
-//     }
-
-//     .awssld__bullets--active[data-index="0"] {
-//       background-image: url("/img/icon-role-guru-active.svg") !important;
-//     }
-//   }
-
-//   .awssld__bullets .awssld__bullets--active {
-//     -webkit-transform: scale(1.5);
-//     -moz-transform: scale(1.5);
-//     transform: none !important;
-//     background: var(--control-bullet-active-color);
-//   }
-
-//   .awssld__bullets .awssld__bullets--loading {
-//     -webkit-transform: scale(1.2);
-//     -moz-transform: scale(1.2);
-//     transform: scale(1.2);
-//   }
-
-//   .slider-body {
-//     z-index: 2;
-//     position: absolute;
-//     bottom: 13%;
-//   }
-// }
 .slider-fitur {
+  .awssld {
+    --content-background-color: none !important;
+  }
+
   .awssld__timer {
     background-color: transparent !important;
   }
 
   .awssld__wrapper {
-    height: auto !important;
+    height: 75vh !important;
   }
 
   .awssld__bullets {
-    // display: none !important;
     z-index: 2 !important;
-    bottom: 5% !important;
-  }
+    top: 0 !important;
+    bottom: unset !important;
+    button {
+      position: relative;
+      background: white !important;
+      height: 94px !important;
+      margin: 24px;
+      border-radius: 0% !important;
+      background-repeat: no-repeat !important;
+      background-size: cover !important;
+      background-position: center !important;
+      -webkit-transition: background-image 0.175s ease-out,
+        -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+      transition: background-image 0.175s ease-out,
+        -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+      -moz-transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+        background-image 0.175s ease-out,
+        -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+      transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+        background-image 0.175s ease-out;
+      transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+        background-image 0.175s ease-out,
+        -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+        -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+      transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+        background-image 0.175s ease-out,
+        -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+    }
 
-  .awssld__bullets button {
-    padding: 0;
-    display: block;
-    width: 8px !important;
-    height: 8px !important;
-    margin: 5px;
-    border-radius: 50%;
-    background: var(--control-bullet-color);
-    text-indent: -9999px;
-    overflow: hidden;
-    cursor: pointer;
-    border: none;
-    -webkit-transition: background-color 0.175s ease-out,
-      -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-    transition: background-color 0.175s ease-out,
-      -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-    -moz-transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-      background-color 0.175s ease-out,
-      -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-    transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-      background-color 0.175s ease-out;
-    transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-      background-color 0.175s ease-out,
-      -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-      -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
-    transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
-      background-color 0.175s ease-out,
-      -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+    .awssld__bullets--active[data-index="0"] {
+      -webkit-transform: scale(1.5);
+      -moz-transform: scale(1.5);
+      transform: none !important;
+    }
+
+    button[data-index="0"] {
+      width: 64px !important;
+      background-image: url("/img/icon-slider-role-guru.svg") !important;
+    }
+
+    .awssld__bullets--active[data-index="0"] {
+      background-image: url("/img/icon-slider-role-guru-active.svg") !important;
+    }
+
+    button[data-index="1"] {
+      width: 64px !important;
+      background-image: url("/img/icon-slider-role-siswa.svg") !important;
+    }
+
+    .awssld__bullets--active[data-index="1"] {
+      background-image: url("/img/icon-slider-role-siswa-active.svg") !important;
+    }
+
+    button[data-index="2"] {
+      width: 77px !important;
+      background-image: url("/img/icon-slider-role-orang-tua.svg") !important;
+    }
+
+    .awssld__bullets--active[data-index="2"] {
+      background-image: url("/img/icon-slider-role-orang-tua-active.svg") !important;
+    }
+
+    button[data-index="3"] {
+      width: 64px !important;
+      background-image: url("/img/icon-slider-role-kepsek.svg") !important;
+    }
+
+    .awssld__bullets--active[data-index="3"] {
+      background-image: url("/img/icon-slider-role-kepsek-active.svg") !important;
+    }
+
+    button[data-index="4"] {
+      width: 84px !important;
+      background-image: url("/img/icon-slider-role-manajemen.svg") !important;
+    }
+
+    .awssld__bullets--active[data-index="4"] {
+      background-image: url("/img/icon-slider-role-manajemen-active.svg") !important;
+    }
+
+    button[data-index="5"] {
+      width: 64px !important;
+      background-image: url("/img/icon-slider-role-alumni.svg") !important;
+    }
+
+    .awssld__bullets--active[data-index="5"] {
+      background-image: url("/img/icon-slider-role-alumni-active.svg") !important;
+    }
+
+    button[data-index="6"] {
+      width: 87px !important;
+      background-image: url("/img/icon-slider-role-perusahaan.svg") !important;
+    }
+
+    .awssld__bullets--active[data-index="6"] {
+      background-image: url("/img/icon-slider-role-perusahaan-active.svg") !important;
+    }
   }
 
   .awssld__bullets .awssld__bullets--active {
     -webkit-transform: scale(1.5);
     -moz-transform: scale(1.5);
-    transform: scale(1.5);
+    transform: none !important;
     background: var(--control-bullet-active-color);
   }
 
@@ -4019,6 +4018,12 @@ main.main-ppdb {
 
   .card-pengguna-smarteschool {
     top: -125px;
+  }
+
+  .slider-fitur {
+    .awssld__wrapper {
+      height: 80vh !important;
+    }
   }
 }
 
@@ -4256,6 +4261,61 @@ main.main-ppdb {
   .card-pengguna-smarteschool {
     top: -175px;
   }
+
+  .slider {
+    .awssld__wrapper {
+      height: 40vh !important;
+    }
+  }
+
+  .slider-fitur {
+    .awssld__wrapper {
+      height: 100vh !important;
+    }
+
+    .awssld__bullets {
+      button {
+        position: relative;
+        background: white !important;
+        height: 70px !important;
+        margin: 10px;
+      }
+      button[data-index="0"] {
+        width: 48px !important;
+        background-size: 48px 70px !important;
+      }
+
+      button[data-index="1"] {
+        width: 48px !important;
+        background-size: 48px 70px !important;
+      }
+
+      button[data-index="2"] {
+        width: 58px !important;
+        background-size: 58px 70px !important;
+      }
+
+      button[data-index="3"] {
+        width: 48px !important;
+        background-size: 48px 70px !important;
+      }
+
+      button[data-index="4"] {
+        width: 63px !important;
+        background-size: 63px 70px !important;
+      }
+
+      button[data-index="5"] {
+        width: 48px !important;
+        background-size: 48px 70px !important;
+      }
+
+      button[data-index="6"] {
+        width: 65px !important;
+        background-size: 65px 70px !important;
+      }
+    }
+  }
 }
 
 @media (max-width: 770px) {
@@ -4416,12 +4476,79 @@ main.main-ppdb {
     }
   }
 
-  .awssld__wrapper {
-    height: 375px !important;
-  }
-
   main {
     padding-top: 58px !important;
+  }
+
+  .slider {
+    .awssld__wrapper {
+      height: 45vh !important;
+    }
+  }
+
+  .slider-fitur {
+    .awssld__wrapper {
+      height: 95vh !important;
+    }
+
+    .awssld__bullets {
+      z-index: 2 !important;
+      top: unset !important;
+      bottom: 0 !important;
+      button[data-index="0"],
+      button[data-index="1"],
+      button[data-index="2"],
+      button[data-index="3"],
+      button[data-index="4"],
+      button[data-index="5"],
+      button[data-index="6"] {
+        width: 8px !important;
+        background-image: none !important;
+      }
+    }
+
+    .awssld__bullets button {
+      padding: 0;
+      display: block;
+      width: 8px !important;
+      height: 8px !important;
+      margin: 5px;
+      border-radius: 50% !important;
+      background: var(--light-gray) !important;
+      text-indent: -9999px;
+      overflow: hidden;
+      cursor: pointer;
+      border: none;
+      -webkit-transition: background-color 0.175s ease-out,
+        -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45) !important;
+      transition: background-color 0.175s ease-out,
+        -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45) !important;
+      -moz-transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+        background-color 0.175s ease-out,
+        -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45) !important;
+      transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+        background-color 0.175s ease-out !important;
+      transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+        background-color 0.175s ease-out,
+        -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+        -moz-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
+      transition: transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45),
+        background-color 0.175s ease-out,
+        -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45) !important;
+    }
+
+    .awssld__bullets .awssld__bullets--active {
+      -webkit-transform: scale(1.5) !important;
+      -moz-transform: scale(1.5) !important;
+      transform: scale(1.5) !important;
+      background: #4890fe !important;
+    }
+
+    .awssld__bullets .awssld__bullets--loading {
+      -webkit-transform: scale(1.2) !important;
+      -moz-transform: scale(1.2) !important;
+      transform: scale(1.2) !important;
+    }
   }
 }
 
@@ -4433,6 +4560,12 @@ main.main-ppdb {
   }
   .landing-app #buku-tamu p {
     width: 100% !important;
+  }
+
+  .slider-fitur {
+    .awssld__wrapper {
+      height: 83vh !important;
+    }
   }
 }
 
