--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1321,7 +1321,7 @@ h6 {
 }
 
 .ant-select-selection-placeholder {
-  font-size: 16px !important; 
+  font-size: 16px !important;
 }
 
 // Form Confirm Salah
@@ -2053,63 +2053,57 @@ input[type="number"] {
   }
 }
 
-// image jurusan
-.image-jurusan {
-  width: 350px;
-  height: 250px;
+// card rekaman
+.card-rekaman {
   transition: 0.8s;
   cursor: pointer;
-}
-
-.image-jurusan::after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  top: 50%;
-  left: 50%;
-  width: 500px;
-  height: 500px;
-  transform: translate(-140%, -50%);
-  background: linear-gradient(
-    to bottom,
-    rgba(7, 0, 66, 0.45),
-    rgba(4, 0, 36, 0.45)
-  );
-  border-radius: 50%;
-  transition: 0.8s;
-}
-
-.image-jurusan:hover:after {
-  transform: translate(-50%, -50%);
-}
-
-.image-jurusan:hover img {
-  transform: translate(-50%, -50%) scale(1.3) rotate(20deg);
-}
-
-.image-jurusan img {
-  position: absolute;
-  height: 110%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: 0.8s;
-}
-
-.image-jurusan .icon-jurusan {
-  position: absolute;
-  z-index: 2;
-  top: 50%;
-  left: 50%;
-  transform: translate(-2000px, -50%);
-  transition: 0.8s;
-  transition-timing-function: ease-in;
-  background: var(--blue);
-}
-
-.image-jurusan:hover .icon-jurusan {
-  transform: translate(-50%, -50%);
-  transition-timing-function: ease;
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    width: 750px;
+    height: 750px;
+    transform: translate(-140%, -50%);
+    background: linear-gradient(
+      to bottom,
+      rgba(7, 0, 66, 0.75),
+      rgba(4, 0, 36, 0.75)
+    );
+    border-radius: 50%;
+    transition: 0.8s;
+  }
+  &:hover:after {
+    transform: translate(-50%, -50%);
+  }
+  &:hover {
+    // img {
+    //   transform: translate(-50%, -50%) scale(1.3) rotate(20deg);
+    // }
+    .btn-play {
+      transform: translate(-50%, -50%);
+      transition-timing-function: ease;
+    }
+  }
+  // img {
+  //   position: absolute;
+  //   height: 110%;
+  //   top: 50%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+  //   transition: 0.8s;
+  // }
+  .btn-play {
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    transform: translate(-2000px, -50%);
+    transition: 0.8s;
+    transition-timing-function: ease-in;
+    // background: var(--blue);
+  }
 }
 
 /* ============== Utility End ==============  */
