--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,6 +28,32 @@
   --shadow-dark: rgba(58, 65, 102, 0.075);
 }
 
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.05);
+  background-color: rgba(0, 0, 0, 0.05);
+  width: 10px;
+  height: 10px;
+  border-radius: 12px;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 10px;
+  background-color: #f4f4f7;
+  border-radius: 50em;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #80849c;
+  border-radius: 50em;
+  &:focus {
+    background-color: rgb(93, 97, 113) !important;
+  }
+  &:active {
+    background-color: rgb(93, 97, 113) !important;
+  }
+}
+
 .auth-layout {
   min-height: 100vh;
 }
@@ -1939,6 +1965,10 @@ input[type="number"] {
 .slider {
   .awssld {
     --content-background-color: none !important;
+  }
+
+  .awssld__timer {
+    background-color: transparent !important;
   }
 
   .awssld__wrapper {
@@ -4405,6 +4435,11 @@ main.main-ppdb {
   .title-highlight {
     bottom: 10px !important;
   }
+
+  .icon-layanan-kami {
+    width: 65px !important;
+    height: 65px !important;
+  }
 }
 
 @media (max-width: 770px) {
@@ -4643,6 +4678,11 @@ main.main-ppdb {
   .title-highlight {
     bottom: 3px !important;
   }
+
+  .icon-layanan-kami {
+    width: 50px !important;
+    height: 50px !important;
+  }
 }
 
 @media (max-width: 575px) {
@@ -4675,6 +4715,10 @@ main.main-ppdb {
     .awssld__wrapper {
       height: 83vh !important;
     }
+  }
+
+  .card-dropdown-gpds {
+    bottom: -25px !important;
   }
 }
 
