--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4010,6 +4010,24 @@ main.main-ppdb {
   }
 }
 
+// Event Page
+.card-event {
+  .card-body {
+    h6,
+    p {
+      transition: 0.3s;
+    }
+  }
+  &:hover {
+    .card-body {
+      h6,
+      p {
+        color: var(--blue) !important;
+      }
+    }
+  }
+}
+
 // ====================== End Landing Page Smarteschool=========================
 
 /* ============== RWD ============== */
