--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -105,17 +105,12 @@
 
 .dangerous-html {
   img {
-    max-width: 100%;
-    max-height: 500px;
+    width: 100%;
+    height: 500px;
     object-fit: contain;
     object-position: center;
     text-align: center;
     display: block;
-  }
-
-  p {
-    margin-bottom: 0 !important;
-    text-indent: 0 !important;
   }
 }
 
