--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3882,19 +3882,19 @@ main.main-ppdb {
 
 // About Page
 .slider-fitur {
-  .awssld {
+  .d {
     --content-background-color: none !important;
   }
 
-  .awssld__timer {
+  .d__timer {
     background-color: transparent !important;
   }
 
-  .awssld__wrapper {
+  .d__wrapper {
     height: 75vh !important;
   }
 
-  .awssld__bullets {
+  .d__bullets {
     z-index: 2 !important;
     top: 0 !important;
     bottom: unset !important;
@@ -3925,7 +3925,7 @@ main.main-ppdb {
         -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
     }
 
-    .awssld__bullets--active[data-index="0"] {
+    .d__bullets--active[data-index="0"] {
       -webkit-transform: scale(1.5);
       -moz-transform: scale(1.5);
       transform: none !important;
@@ -3936,7 +3936,7 @@ main.main-ppdb {
       background-image: url("/img/icon-slider-role-guru.svg") !important;
     }
 
-    .awssld__bullets--active[data-index="0"] {
+    .d__bullets--active[data-index="0"] {
       background-image: url("/img/icon-slider-role-guru-active.svg") !important;
     }
 
@@ -3945,7 +3945,7 @@ main.main-ppdb {
       background-image: url("/img/icon-slider-role-siswa.svg") !important;
     }
 
-    .awssld__bullets--active[data-index="1"] {
+    .d__bullets--active[data-index="1"] {
       background-image: url("/img/icon-slider-role-siswa-active.svg") !important;
     }
 
@@ -3954,7 +3954,7 @@ main.main-ppdb {
       background-image: url("/img/icon-slider-role-orang-tua.svg") !important;
     }
 
-    .awssld__bullets--active[data-index="2"] {
+    .d__bullets--active[data-index="2"] {
       background-image: url("/img/icon-slider-role-orang-tua-active.svg") !important;
     }
 
@@ -3963,7 +3963,7 @@ main.main-ppdb {
       background-image: url("/img/icon-slider-role-kepsek.svg") !important;
     }
 
-    .awssld__bullets--active[data-index="3"] {
+    .d__bullets--active[data-index="3"] {
       background-image: url("/img/icon-slider-role-kepsek-active.svg") !important;
     }
 
@@ -3972,7 +3972,7 @@ main.main-ppdb {
       background-image: url("/img/icon-slider-role-manajemen.svg") !important;
     }
 
-    .awssld__bullets--active[data-index="4"] {
+    .d__bullets--active[data-index="4"] {
       background-image: url("/img/icon-slider-role-manajemen-active.svg") !important;
     }
 
@@ -3981,7 +3981,7 @@ main.main-ppdb {
       background-image: url("/img/icon-slider-role-alumni.svg") !important;
     }
 
-    .awssld__bullets--active[data-index="5"] {
+    .d__bullets--active[data-index="5"] {
       background-image: url("/img/icon-slider-role-alumni-active.svg") !important;
     }
 
@@ -3990,19 +3990,19 @@ main.main-ppdb {
       background-image: url("/img/icon-slider-role-perusahaan.svg") !important;
     }
 
-    .awssld__bullets--active[data-index="6"] {
+    .d__bullets--active[data-index="6"] {
       background-image: url("/img/icon-slider-role-perusahaan-active.svg") !important;
     }
   }
 
-  .awssld__bullets .awssld__bullets--active {
+  .d__bullets .d__bullets--active {
     -webkit-transform: scale(1.5);
     -moz-transform: scale(1.5);
     transform: none !important;
     background: var(--control-bullet-active-color);
   }
 
-  .awssld__bullets .awssld__bullets--loading {
+  .d__bullets .d__bullets--loading {
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
     transform: scale(1.2);
@@ -4163,7 +4163,7 @@ main.main-ppdb {
   }
 
   .slider-fitur {
-    .awssld__wrapper {
+    .d__wrapper {
       height: 80vh !important;
     }
   }
